--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     function showIt() {
       alert('Телепортация на страницу любимого человека...')
-      window.location.href = "https://vk.com/id0";
+      window.location.href = "https://m.vk.com/id0";
     }
   </script>
 </body>
